# ironclaw

./: .dockerignore  .env.example  .env.railway  .env.railway.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_RAILWAY.md  Dockerfile  FEATURE_PARITY.md  ISSUES.md  Justfile  LOCAL_GIT_GUIDE.md  README.md  deny.toml  entrypoint.sh  latest_logs.txt  nixpacks.toml  railway.json  railway.toml  railway_logs.txt
channels-src/signal/: Cargo.toml  build.rs  build.sh  signal.capabilities.json
channels-src/signal/src/: access_control.rs  config.rs  lib.rs  proto.rs  store.rs
channels-src/signal/src/signal_service/: mod.rs  provisioning.rs
docs/: ARCHITECTURE.md  LLM_PROVIDERS.md  TELEGRAM_SETUP.md  USER_MANAGEMENT_API.md  development-history.md  engine-v2-architecture.md
migrations/: V16__channel_state.sql  V19__ownership_fk.sql  V2__workspace_memory.sql
registry/: _bundles.json
review/: pr-audit-fix-2088-admin-system-prompt.md
scripts/: pre-commit-safety.sh
src/: app.rs  config.rs  error.rs  generated_images.rs  lib.rs  main.rs  settings.rs  tenant.rs
tests/: e2e_advanced_traces.rs  e2e_live_personas.rs  e2e_response_order.rs  e2e_routine_heartbeat.rs  engine_v2_gate_integration.rs  gateway_workflow_integration.rs  lancedb_integration.rs  multi_tenant_integration.rs  oauth_greeting_integration.rs  openai_compat_integration.rs  ownership_integration.rs  pairing_integration.rs  signal_protocol_integration.rs  skill_credential_injection.rs  wasm_channel_integration.rs  wit_compat.rs  workspaces_integration.rs  (+1 more)
wit/: channel.wit
(+311 files in other folders)
