[package]
name = "signal-channel"
version = "0.1.0"
edition = "2021"
description = "Native Signal Protocol channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for binary data in workspace storage
base64 = "0.22"

# Protobuf runtime (for Signal message types)
prost = "0.13"

# Async trait (required by libsignal-protocol storage traits)
async-trait = "0.1"

# UUID (required by libsignal-protocol sender key store)
uuid = "1.1"

# Signal Protocol — vendored with rayon + kyber made optional
libsignal-protocol = { path = "vendor/libsignal-protocol", default-features = false }

# Crypto primitives for provisioning cipher
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
members = ["."]
exclude = [
    "vendor/libsignal-protocol",
    "vendor/libsignal-core",
    "vendor/signal-crypto",
]
